{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 338,
  "lineage": "cba2afe6-848c-ac32-79cc-413062c3bce0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkInterfaces/blue",
            "internal_domain_name_suffix": "f2odun5zakoevn4hhjrrcwagfb.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-blue/subnets/vnet_blue_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "00-0D-3A-A7-C1-3F",
            "name": "blue",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "main-resource-group",
            "virtual_machine_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Compute/virtualMachines/blue"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.blue",
            "azurerm_virtual_network.blue"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkInterfaces/green",
            "internal_domain_name_suffix": "db0pfozmkbxenj5ngaeoyx4aec.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.3.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-green/subnets/vnet_green_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "60-45-BD-31-15-89",
            "name": "green",
            "private_ip_address": "10.3.0.4",
            "private_ip_addresses": [
              "10.3.0.4"
            ],
            "resource_group_name": "main-resource-group",
            "virtual_machine_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Compute/virtualMachines/green"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.green",
            "azurerm_virtual_network.green"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "red",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkInterfaces/red",
            "internal_domain_name_suffix": "zti135m5hwqejolxzl1neeb0mf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-red/subnets/vnet_red_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "00-0D-3A-43-78-3C",
            "name": "red",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "main-resource-group",
            "virtual_machine_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Compute/virtualMachines/red"
          },
          "dependencies": [
            "azurerm_public_ip.ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.red",
            "azurerm_virtual_network.red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkInterfaces/red|/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "network_interface_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkInterfaces/red",
            "network_security_group_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkSecurityGroups/nsg"
          },
          "dependencies": [
            "azurerm_network_interface.red",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.red",
            "azurerm_virtual_network.red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "location": "centralus",
            "name": "nsg",
            "resource_group_name": "main-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "108.7.56.127",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "main-resource-group",
            "source_address_prefix": "108.7.56.127",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.176.176.24",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "public-ip",
            "resource_group_name": "main-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-blue/subnets/vnet_blue_subnet",
            "name": "vnet_blue_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "main-resource-group",
            "virtual_network_name": "vnet-blue"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.blue"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-green/subnets/vnet_green_subnet",
            "name": "vnet_green_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "main-resource-group",
            "virtual_network_name": "vnet-green"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.green"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "purple",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.4.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-purple/subnets/vnet_purple_subnet",
            "name": "vnet_purple_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "main-resource-group",
            "virtual_network_name": "vnet-purple"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.purple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "red",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-red/subnets/vnet_red_subnet",
            "name": "vnet_red_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "main-resource-group",
            "virtual_network_name": "vnet-red"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "373a1c2f-02f9-4a9c-b7c7-3a6311580629",
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-blue",
            "location": "centralus",
            "name": "vnet-blue",
            "resource_group_name": "main-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.2.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-blue/subnets/vnet_blue_subnet",
                "name": "vnet_blue_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bbf27418-502c-466e-a7ed-3008ec5fc022",
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-green",
            "location": "centralus",
            "name": "vnet-green",
            "resource_group_name": "main-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.3.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-green/subnets/vnet_green_subnet",
                "name": "vnet_green_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "purple",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.4.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f1640a4a-fdc4-4eb9-b371-8c5aa70598bf",
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-purple",
            "location": "centralus",
            "name": "vnet-purple",
            "resource_group_name": "main-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.4.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-purple/subnets/vnet_purple_subnet",
                "name": "vnet_purple_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "red",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fdbed1cc-3d9f-44a0-b977-caf6d2103a65",
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-red",
            "location": "centralus",
            "name": "vnet-red",
            "resource_group_name": "main-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-red/subnets/vnet_red_subnet",
                "name": "vnet_red_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "blue_to_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-blue/virtualNetworkPeerings/blue_to_green",
            "name": "blue_to_green",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-green",
            "resource_group_name": "main-resource-group",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-blue"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.blue",
            "azurerm_virtual_network.green"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "blue_to_red",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-blue/virtualNetworkPeerings/blue_to_red",
            "name": "blue_to_red",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-red",
            "resource_group_name": "main-resource-group",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-blue"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.blue",
            "azurerm_virtual_network.red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "green_to_red",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-green/virtualNetworkPeerings/green_to_red",
            "name": "green_to_red",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-red",
            "resource_group_name": "main-resource-group",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-green"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.green",
            "azurerm_virtual_network.red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "red_to_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-red/virtualNetworkPeerings/red_to_blue",
            "name": "red_to_blue",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a35492ef-d394-49c7-9d83-77aaa06d0fc0/resourceGroups/main-resource-group/providers/Microsoft.Network/virtualNetworks/vnet-blue",
            "resource_group_name": "main-resource-group",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-red"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.blue",
            "azurerm_virtual_network.red"
          ]
        }
      ]
    }
  ]
}